--- a/web/static/h-ui.admin/css/H-ui.login.css
+++ b/web/static/h-ui.admin/css/H-ui.login.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 /* -----------H-ui前端框架-------------
-* H-ui.login.css v2.2.1	后台登录页样式
+* H-ui.Login.css v2.2.1	后台登录页样式
 * http://www.h-ui.net/
 * Created & Modified by guojunhui
 * Date modified 2015.6.5
